--- a/README.adoc
+++ b/README.adoc
@@ -1,13 +1,16 @@
+:branch: dev
+:uri-build-windows: https://ci.appveyor.com/project/steeltoe/tooling/branch/{branch}
+:uri-status-windows: https://ci.appveyor.com/api/projects/status/bpwhsnue8j7iiwpp/branch/{branch}?svg=true
+:uri-build-linuxosx: https://travis-ci.org/SteeltoeOSS/Tooling
+:uri-status-linuxosx: {uri-build-linuxosx}.svg?branch={branch}
+
 = Steeltoe Tooling
 :toc:
 :toclevels: 2
 
-|===
-| Platform   | Build Status
+Windows    image:{uri-status-windows}["Windows Build Status", link={uri-build-windows}]
 
-| Windows    | image:{uri-status-windows}?svg=true&branch={branch}["Windows Build Status", link={uri-build-windows}]
-| Linux/OS X | image:{uri-status-linuxosx}.svg?branch={branch}["Linux/OS X Build Status", link={uri-build-linuxosx}]
-|===
+Linux/OS X image:{uri-status-linuxosx}["Linux/OS X Build Status", link={uri-build-linuxosx}]
 
 == About
 
