--- a/README.adoc
+++ b/README.adoc
@@ -16,8 +16,14 @@ Linux/OS X image:{uri-status-linuxosx}["Linux/OS X Build Status", link={uri-buil
 
 Tools for Steeltoe Developers.
 
-This projects provides a CLI to assist Steeltoe Developers with deploying Steeloe projects to CloudFoundry and Docker.
-This project also provides an API that can be used to integrate Steeltoe Tooling with other tools such as IDEs.
+The goal of this project is to provide tools to assist Steeltoe Developers.
+The current focus is an API and CLI to help with deploying Steeltoe Applications and dependent services to Cloud Foundry and Docker.
+
+Subsequent goals include:
+
+* a Visual Studio plugin leveraging the API
+* plugins for other IDES, such as Visual Studio Code and JetBrains Riser
+* Visual Studio/DotNET templates
 
 == Quick Start
 
