--- a/docs/users_guide.adoc
+++ b/docs/users_guide.adoc
@@ -8,7 +8,7 @@
 
 .install
 ----
-$ dotnet tool install --global --add-source https://www.myget.org/F/steeltoedev/api/v3/index.json --version 1.0.0-m1 steeltoe.cli
+$ dotnet tool install --global --version 1.0.0-m1 Steeltoe.Cli
 $ st --version
 1.0.0-m1
 ----
