Add archive text to README

--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 :uri-build: https://dev.azure.com/SteeltoeOSS/Steeltoe/_build?definitionId=11&_a=summary
 :uri-build-status: https://dev.azure.com/SteeltoeOSS/Steeltoe/_apis/build/status/SteeltoeOSS.Tooling?branchName={branch}
 
-= Steeltoe Tooling
+= Steeltoe Tooling is no longer actively maintained by VMware, Inc.
 :toc:
 :toclevels: 2
 
